removed hover effect from mobile and tablet versions. added Readme.

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>W Magazine - Even Stranger Things</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
-    <link rel="icon" href="img/logo.png" type="image/x-icon"/>
+    <link rel="icon" href="./img/logo.png" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
@@ -17,8 +17,8 @@
         <div></div>
         <div></div>
       </div> 
-      <img class="logo" src="img/logo.png" alt="Logotype">
-      <div id="site-name">W Magazine</div>
+      <img class="logo" src="./img/logo.png" alt="Logotype">
+      <div class="site-name">W Magazine</div>
       <nav>
         <a href="#">Journal</a>
         <a href="#">Podcast</a>
@@ -36,7 +36,7 @@
 
   <main>  
     <section class="big-news-container">
-      <img class="top" src="img/BillyandMrsWheeler.jpg"  alt="Billy and Mrs Wheeler"/>
+      <img class="top" src="./img/BillyandMrsWheeler.jpg"  alt="Billy and Mrs Wheeler"/>
       <div class="top-text">
         <h3>TOP STORY</h3>
         <h2>Billy and Mrs Wheeler in Court</h2>
@@ -49,7 +49,7 @@
 
     <section class="small-news-container">
       <div class="cards">
-        <img class="card-1" src="img/Jazzercise.png" alt="Jazzercise image"/>
+        <img class="card-1" src="./img/Jazzercise.png" alt="Jazzercise image"/>
         <div class="card-text">
           <h3>IN BRIEF</h3>
           <h2>Jazzercise - Not For Everyone</h2>
@@ -59,7 +59,7 @@
       </div>
   
       <div class="cards">
-        <img class="card-2" src="img/Eleven.jpg" alt="Eleven"/>
+        <img class="card-2" src="./img/Eleven.jpg" alt="Eleven"/>
         <div>
           <h3>PODCAST</h3>
           <h2>Eleven is Back - Tells All</h2>
@@ -69,7 +69,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-3" src="img/Truck.jpg" alt="Truck" width=/>
+        <img class="card-3" src="./img/Truck.jpg" alt="Truck" width=/>
         <div>
           <h3>IN BRIEF</h3>
           <h2>Hawkins Police Dept in Trouble</h2>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-4" src="img/halloween-party-1.png" alt="Halloween Party" width=/>
+        <img class="card-4" src="./img/halloween-party-1.png" alt="Halloween Party" width=/>
         <div>
           <h3>JOURNAL</h3>
           <h2>It's Halloween Folks!</h2>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-5" src="img/Mallinside.png" alt="The Mall"/>
+        <img class="card-5" src="./img/Mallinside.png" alt="The Mall"/>
         <div>
           <h3>PODCAST</h3>
           <h2>Finally, Mall is Opened</h2>
@@ -99,7 +99,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-6" src="img/NewCoke.png" alt="New Coke"/>
+        <img class="card-6" src="./img/NewCoke.png" alt="New Coke"/>
         <div>
           <h3>JOURNAL</h3>
           <h2>A Coke a Day Keeps the Doctor...</h2>
@@ -109,7 +109,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-7" src="img/Startcourt-Mall-1024x580.jpeg" alt="Starcourt Mall"/>
+        <img class="card-7" src="./img/Startcourt-Mall-1024x580.jpeg" alt="Starcourt Mall"/>
         <div>
           <h3>IN BRIEF</h3>
           <h2>Pink <i>Is</i> the New Black</h2>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-8" src="img/TheGang2.jpg" alt="The Stranger Things Crew"/>
+        <img class="card-8" src="./img/TheGang2.jpg" alt="The Stranger Things Crew"/>
         <div>
           <h3>JOURNAL</h3>
           <h2>Hey - They're Still Alive!</h2>
@@ -133,8 +133,8 @@
 <!--FOOTER-->
   
     <footer>
-      <p>&copy anna hasselström 2020</p>
-      <img class="logo" src="img/Stranger-Things-Logo-700x394.png" alt="Logotype">
+      <p>&copy Mrs Wheeler 2020</p>
+      <img class="logo" src="./img/Stranger-Things-Logo-700x394.png" alt="Logotype">
     </footer> 
     
   </body>
