Final fixes before hand-in

--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,9 @@
           <div class="topstory--rightcol">
             <h1>Wow! When This Hospital Was Short on Doctors, This Adorable Dog With a Stethoscope Stepped In</h1>
             <p id="topstory">Man’s best friend? More like man’s best physician! As the pandemic rages on, hospitals everywhere are feeling the pressure, but one lucky ward is getting a plucky puppy to pitch in! Dr. Woof, as he’s known locally, has been making the rounds and offering his highly unqualified but adorable aid to as many patients as paw-sible.</p>
-            <a href="#" class="redlink">Read more</a>
+            <div class="topstory--linkbox">
+              <a href="https://reductress.com/post/when-this-hospital-was-short-on-doctors-this-adorable-dog-with-a-stethoscope-stepped-in/" class="redlink", target="_blank">Read more</a>
+            </div>
           </div>
         </article>
       </section>
