--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,58 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Project 2: The ultimate guide to Corona</title>
     <link rel="stylesheet" href="./style.css" />
+    <!--font from google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+       <!-- Some kind of logo and navbar -->
+      <img class= "icon" src ="icon-corona-black.png" alt="Corona virus">
+      <h1> hashtagCORONA</h1>
+      <nav>
+        <a href="#">Contact</a>
+        <a href="#">Contact</a>
+        <a href="#">Contact</a>
+        <a href="#">Link</a>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+        <img src="corona_bignews.jpg" alt="Corona virus">
+        <h2>Coronavirus facts and prevention tips</h2>
+        <p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC recommends the following prevention measures:
+          Wash your hands often with soap and water for at least 20 seconds. If soap and water are not available, use an alcohol-based hand sanitizer.
+          Avoid touching your eyes, nose, and mouth with unwashed hands
+          Avoid close contact with people who are sick.
+          Stay home when you are sick.
+          Cover your cough or sneeze with a tissue, then throw the tissue in the trash.</p>
     </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <div class="news_cards">
+      <div class="card"><img src="corona_1.jpg" alt="corona picture 1">Text</div>
+      <div class="card"><img src="corona_2.jpg" alt="corona picture 2">Text</div>
+      <div class="card"><img src="corona_3.jpg" alt="corona picture 3">Text</div>
+      <div class="card"><img src="corona_4.jpg" alt="corona picture 3">Text</div>
+      <div class="card"><img src="corona_5.jpg" alt="corona picture 3">Text</div>
+      <div class="card"><img src="corona_6.jpg" alt="corona picture 3">Text</div>
+      <div class="card"><img src="corona_7.jpg" alt="corona picture 3">Text</div>
+      <div class="card"><img src="corona_8.jpg" alt="corona picture 3">Text</div>
+    </div>
+    
+    <footer>
+        <div class="instagram">
+        <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank"><img src="instagram-icon.png" alt="Click to visit us on Instagram"></a>
+      </div>
+      <div class="github">
+        <a href="https://github.com/MayaBlixt" target="_blank"><img src="Github_icon.png" alt="Click to visit us on Github"></a>
+      </div>
+      <div class="linkedin">
+        <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"><img src="linkedin_icon.png" alt="Click to visit me on Linkedin"></a>
+      </div>
+      </footer>
   </body>
 </html>
