--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+    <span style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776; </span>
     <script>
       function openNav() {
         document.getElementById("myNav").style.width = "100%";
@@ -139,20 +139,6 @@
 
     <!--card 7-->
     <a href="#">
-      <div class="card seven">
-        <h4>FINANCE</h4>
-        <img src="aktie.jpg" alt="Hexbot image">
-        <h5>Chrystia Freeland named Canada's first female finance minister</h5>
-        <p>Canada's deputy prime minister Chrystia Freeland has been named finance minister following a Cabinet shuffle.
-        </p>
-        <div class="fadedbox">
-          <div class="title text"><button>FINANCE</button> </div>
-        </div>
-      </div>
-    </a>
-
-    <!--card 8-->
-    <a href="#">
       <div class="card eight">
         <h4>HEALTH</h4>
         <img src="mask-4934395_640.jpg" alt="Hexbot image">
@@ -164,7 +150,7 @@
       </div>
     </a>
 
-    <!--card 9-->
+    <!--card 8-->
     <a href="#">
       <div class="card .nine">
         <h4>TECH</h4>
@@ -182,8 +168,8 @@
   </section>
 
   <footer>
-    <h2> by Nathalie Nordströn</h2>
-    <h5>at Technigo</h5>
+    <h2> by Nathalie Nordström</h2>
+    <h5>@ Technigo</h5>
   </footer>
 
 
