--- a/code/index.html
+++ b/code/index.html
@@ -4,26 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css"   href="style.css">
   <title>Game Zone Home</title>
 
 
 </head>
 <body>
 <header>
+
   <Div class="hamburger">
     <div></div>
     <div></div>
     <div></div>
   </Div>
-  <img src="./img/Gamelogo.png" alt="Game Zone Icon">
-  <nav>
-    <a href="#">HOME</a>
-    <a href="#">GUIDES</a>
-    <a href="#">UPCOMING</a>
-    <a href="#">UPDATES</a>
 
-  </nav>
+  <img class="logo-image" src="./img/Gamelogo.png" alt="Game Zone Icon">
+  
+  <div class="nav">
+    
+    <li><a href="#" class="navlink">HOME</a></li>
+    <li><a href="#" class="navlink">GUIDES</a></li>
+    <li><a href="#" class="navlink">UPCOMING</a></li>
+    <li><a href="#" class="navlink">UPDATES</a></li>
+  
+
+  </div>
 </header>
 
 <section class="welcome-container">
@@ -35,6 +40,7 @@
 </section>
 
 <main class="wrapper">
+
     <div class="card">
       <a href="#"><img src="./img/rdr2.jpg" alt="Red Dead Redemption II"></a>
       <h2>Red Dead Redemption 2</h2>
@@ -71,6 +77,12 @@
     </div>
 
   </main>
+
+  <footer>
+
+    <p>Footer</p>
+
+  </footer>
 
 </body>
 </html>
