finish layout responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -15,17 +15,15 @@
   <header>
     <section id="section-1" class="section-1">
 
-      <a href="#">
-        <img class="logo" src="logo.svg">
-      </a>
-
-      <h1>SITE NAME</h1>
-
       <nav>
-        <a href="#">one</a>
-        <a href="#">two</a>
-        <a href="#">three</a>
-        <a href="#">four</a>
+        <a class="logo-container" href="#">
+          <img class="logo" src="logo.svg">
+        </a>
+        <h1 class="site-name-top">SITE NAME</h1>
+        <a class="nav-bar" href="#">one</a>
+        <a class="nav-bar" href="#">two</a>
+        <a class="nav-bar" href="#">three</a>
+        <a class="nav-bar" href="#">four</a>
       </nav>
 
     </section>
@@ -35,7 +33,7 @@
   <!-- SECTION 2 - the big news content -->
   <section id="section-2" class="section-2">
 
-    <img src="logo.svg">
+    <figure class="img-container"><img src="logo.svg"></figure>
     <div class="big-news">
       <a class="news" href="#">
         <h2>hejsan svejsan vad heter du</h2>
