Mobile view, all cards, header

--- a/code/index.html
+++ b/code/index.html
@@ -1,131 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <img src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
-      <!-- <img src="header-image.jpg" alt="The New Yorker logo"> -->
-      <nav>
-        <a href="">Newsletter</a>
-        <a href="">Sign in</a>
-        <a href="">Shop</a>
-      </nav>
-      <!-- Some kind of logo and navbar (in the header)-->
-    </header>
-    
-      <!-- The big news content -->
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+  <header>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <img src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
+    <!-- <img src="header-image.jpg" alt="The New Yorker logo"> -->
+    <nav>
+      <a href="">Newsletter</a>
+      <a href="">Sign in</a>
+      <a href="">Shop</a>
+    </nav>
+    <!-- Some kind of logo and navbar (in the header)-->
+  </header>
+  <main>
+    <!-- The big news content -->
     <section class="big-news">
       <div class="big-news-card">
-        <img src="logo.svg" alt="Technigo logo">
+        <img src="./COVID-19-adam-niescioruk-Z9arfr0f248-unsplash.jpg" 
+        alt="Black facial mask graffiti on a white wall.">
         <article class="big-news-article">
-          <h1>Det är fredag mina bekanta</h1>
+          <a href="#">News</a>
+          <h1>"Det är fredag mina bekanta!"</h1>
           <p>
-            It's finally Friday and I have had a very lärorikt week.<span>#happypanda</span>
+            A popular Friday greeting including iconic frog used among Swedish redditors has spilled outside of the country.
+            <br><br><br><br><i><b>Read more ...</b></i>
           </p>
         </article>
       </div>
     </section>
-      
-      <!-- The other news  -->
-    <section class="smaller-news">
-      <div class="smaller-news-cards">
-        <div class="single-little-card">
-          <!-- <img src="logo.svg" alt="Technigo logo"> -->
-          <article>
-            <a href="#">News</a>
-            <h2>An Apocalyptic August in California</h2>
-            <p>
-              By Anna Weiner. 
-            </p>
-          </article>
-          <img src="./logo.svg" alt="Technigo logo">
-        </div>
-        <div class="single-little-card">
-          <img src="logo.svg" alt="Technigo logo">
-          <article>
-            <a href=""></a>
-            <h2>Mala novica 2 zate</h2>
-            <p>
-              Manjsi news test tekst. 
-            </p>
-          </article>
-        </div>
+    <!-- The other news  -->
+    <section class="small-news">
+      <div class="small-news-card">
+        <img src="./tiktok.jpeg" 
+        alt="Image of tiktok text written by a typwriter.">
+        <article>
+          <a href="#">Books & Culture</a>
+          <h2>TikTok sensation will last. Millenials feel thay got it under control</h2>
+          <p>
+            By Ticky DeFan.
+          </p>
+        </article>
       </div>
-      <div class="smaller-news-cards">
-        <div class="single-little-card">
-          <img src="logo.svg" alt="Technigo logo">
-          <article>
-            <h2>Mala novica 3 zate</h2>
-            <p>
-              Manjsi news test tekst. 
-            </p>
-          </article>
-        </div>
-        <div class="single-little-card">
-          <img src="logo.svg" alt="Technigo logo">
-          <article>
-            <h2>Mala novica 4 zate</h2>
-            <p>
-              Manjsi news test tekst. 
-            </p>
-          </article>
-        </div>
+      <div class="small-news-card">
+        <article>
+          <a href="">Crossword</a>
+          <h2>Mala novica 2 zate</h2>
+          <p>
+            By <b><i>Fanny Svensson</i></b>
+          </p>
+        </article>
+        <img src="./" 
+        alt="Graffiti with crossed camera as a person's head.">
       </div>
-      <div class="smaller-news-cards">
-        <div class="single-little-card">
-          <img src="logo.svg" alt="Technigo logo">
-          <article>
-            <h2>Mala novica 5 zate</h2>
-            <p>
-              Manjsi news test tekst. 
-            </p>
-          </article>
-        </div>
-        <div class="single-little-card">
-          <img src="logo.svg" alt="Technigo logo">
-          <article>
-            <h2>Mala novica 6 zate</h2>
-            <p>
-              Manjsi news test tekst. 
-            </p>
-          </article>
-        </div>
+      <div class="small-news-card">
+        <img src="./dinner.jpg" 
+        alt="Table with food.">
+        <article>
+          <a href="#">Goings On</a>
+          <h2>Dinner experience at Fabula-ous in New new York is exeptional.</h2>
+          <p>
+            By <b><i>Foodlaura DeFoodie</i></b>
+          </p>
+        </article>
       </div>
-      <div class="smaller-news-cards">
-        <div class="single-little-card">
-          <img src="logo.svg" alt="Technigo logo">
-          <article>
-            <h2>Mala novica 7 zate</h2>
-            <p>
-              Manjsi news test tekst. 
-            </p>
-          </article>
-        </div>
-        <div class="single-little-card">
-          <img src="logo.svg" alt="Technigo logo">
-          <article>
-            <h2>Mala novica 8 zate</h2>
-            <p>
-              Manjsi news test tekst. 
-            </p>
-          </article>
-        </div>
+      <div class="small-news-card">
+        <img src="./dinner.jpg" alt="Table with food.">
+        <article>
+          <a href="#">Fiction & Poetry</a>
+          <h2>Mala novica 4 zate</h2>
+          <p>
+            By <b><i>Robert Robertsson</i></b>
+          </p>
+        </article>
       </div>
     </section>
+  </main>
+  <footer>
+    <p>- author - 
+      <br><b>Rebeka Kovačič</b>
+      <br>Frontend Developer in the making 
+      <br>Technigo student 
+      <br><b>email:</b> example@email.com</p>
+  </footer>
+</body>
 
-    <footer>
-      Here is the footer.
-    </footer>
-  </body>
 </html>
