--- a/code/index.html
+++ b/code/index.html
@@ -15,23 +15,22 @@
       <img class= "icon" src ="icon-corona-black.png" alt="Corona virus">
       <h1> hashtagCORONA</h1>
       <nav>
-        <a href="#">Contact</a>
-        <a href="#">Contact</a>
-        <a href="#">Contact</a>
-        <a href="#">Link</a>
-      </nav>
+        <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO</a>
+        <a href="https://www.worldometers.info/coronavirus/?">Corona cases</a>
+        <a href="https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/statistik-och-analyser/bekraftade-fall-i-sverige/">FHM</a>
+        <a href="https://www.youtube.com/watch?v=bqx19f0ceUo">Corona TikTok Dance</a>
+      </nav>  
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
         <img src="corona_bignews.jpg" alt="Corona virus">
-        <h2>Coronavirus facts and prevention tips</h2>
-        <p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC recommends the following prevention measures:
+        <div class="news"><p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC recommends the following prevention measures:
           Wash your hands often with soap and water for at least 20 seconds. If soap and water are not available, use an alcohol-based hand sanitizer.
           Avoid touching your eyes, nose, and mouth with unwashed hands
           Avoid close contact with people who are sick.
           Stay home when you are sick.
-          Cover your cough or sneeze with a tissue, then throw the tissue in the trash.</p>
+          Cover your cough or sneeze with a tissue, then throw the tissue in the trash.</p></div>
     </section>
     <div class="news_cards">
       <div class="card"><img src="corona_1.jpg" alt="corona picture 1">Text</div>
