--- a/code/index.html
+++ b/code/index.html
@@ -103,8 +103,8 @@
       </article>
     </section>
 
-    <section class="footer">
+    <footer>
       <p>© 2020 Sofia Vaz Sousa 🦊</p>
-    </section>
+    </footer>
   </body>
 </html>
