no it's working

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,71 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>HEALTH HACK</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
   </head>
   <body>
+
+     <!-- Some kind of logo and navbar in the header -->
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img src="HealthyHackLogo.gif" alt="HealthHackLogo">
+      <h1>HEALTH HACK</h1>
+          <a href="#home">Home</a>
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+  
     </header>
-
+      
     <section class="big-news">
-      <!-- The big news content -->
+      <img src="cloudberry.jpg" alt="cloudberry">
+      <div class="big-news-text">
+       <h3>HACK SEROTONIN: EXPLORE THE CLOUDBERRY SEASON</h3>
+       <p>Now is the time to go hunt cloudberries, and while walking in nature also gain some serotonin.</p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news-cards">
+      <div class="card">
+        <img src="goodfood.jpg" alt="good-food" style="width:100%">
+        <div class="container">
+          <h4><b>HACK DOPAMINE</b></h4>
+          <p>Eating good food makes the "the reward chemical" dopamine make you feel good.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="laughing.jpg" alt="laughing" style="width:100%">
+        <div class="container">
+          <h4><b>HACK ENDORPHIN</b></h4>
+          <p>Laughing with friends, even laughing exercise, makes "the pain killer" endorphine make you feel good.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="hugging.jpg" alt="hugging" style="width:100%">
+        <div class="container">
+          <h4><b>HACK OXYTOCIN</b></h4>
+          <p>Hugging makes "the love hormone" oxytocin make us feel good.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="archipelago.jpg" alt="archipelago" style="width:100%">
+        <div class="container">
+          <h4><b>HACK SEROTONIN</b></h4>
+          <p>Meditating in nature with sun expose is the real thing for the mood stabilizer chemical serotonin.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="spa.jpg" alt="spa" style="width:100%">
+        <div class="container">
+          <h4><b>HACK DOPAMINE</b></h4>
+          <p>Taking care of yourself makes the dopamine chemical show, why don´t enjoy yourself at a spa?</p>
+        </div>
+      </div>
     </section>
+
+    <footer>By Elisa (my first individual project as a student at Technigo Front End Boot Camp).
+    </footer>
   </body>
 </html>
