text changes in small news

--- a/code/index.html
+++ b/code/index.html
@@ -101,28 +101,28 @@
 
     <div class="small-news">
       <h4>Interview</h4>
-      <p>Solo Traveling</p>
+      <p>"Solo Traveling"</p>
       <img class="small-img" src="./img/travel.jpg" alt="">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Health</h4>
-      <p>Sweden just hit 0%</p>
+      <p>"Innovation health app a success" </p>
       <img class="small-img" src="./img/flowers.jpg" alt="">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
-      <h4>Small news</h4>
-      <p>bla bla bla</p>
+      <h4>Anonymus</h4>
+      <p>"She started her own company"</p>
       <img class="small-img" src="./img/anonymus.jpg" alt="">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Business</h4>
-      <p>Support new business</p>
+      <p>"Super success for startup"</p>
       <img class="small-img" src="./img/business.jpg" alt="">
       <a href="#"></a>
     </div>
