--- a/code/index.html
+++ b/code/index.html
@@ -35,8 +35,13 @@
           <a href="#">News</a>
           <h1>"Det är fredag mina bekanta!"</h1>
           <p>
-            A popular Friday greeting including iconic frog used among Swedish redditors has spilled outside of the country.
-            <br><br><br><br><i><b>Read more ...</b></i>
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+            <br><br><br><i><b>Read more ...</b></i>
           </p>
         </article>
       </div>
@@ -45,32 +50,38 @@
     <section class="small-news">
       <div class="small-news-card">
         <img src="./tiktok.jpeg" 
-        alt="Image of tiktok text written by a typwriter.">
+        alt="">
         <article>
           <a href="#">Books & Culture</a>
-          <h2>TikTok sensation will last. Millenials feel thay got it under control</h2>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
           <p>
-            By Ticky DeFan.
+            By <b><i>Ticky DeFan.</i></b>
           </p>
         </article>
       </div>
       <div class="small-news-card">
+        <img src="./tiktok.jpeg" 
+        alt="Image of tiktok text written by a typwriter.">
         <article>
           <a href="">Crossword</a>
-          <h2>Mala novica 2 zate</h2>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
           <p>
             By <b><i>Fanny Svensson</i></b>
           </p>
         </article>
-        <img src="./" 
-        alt="Graffiti with crossed camera as a person's head.">
       </div>
       <div class="small-news-card">
         <img src="./dinner.jpg" 
         alt="Table with food.">
         <article>
           <a href="#">Goings On</a>
-          <h2>Dinner experience at Fabula-ous in New new York is exeptional.</h2>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
           <p>
             By <b><i>Foodlaura DeFoodie</i></b>
           </p>
@@ -80,7 +91,9 @@
         <img src="./dinner.jpg" alt="Table with food.">
         <article>
           <a href="#">Fiction & Poetry</a>
-          <h2>Mala novica 4 zate</h2>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
           <p>
             By <b><i>Robert Robertsson</i></b>
           </p>
