Added background, changed nav links

--- a/code/index.html
+++ b/code/index.html
@@ -11,9 +11,11 @@
       <!-- Some kind of logo and navbar -->
       <img src="Images/Resurs3.png" alt="Backstreet News Logo" />
       <nav>
-        <a href="#">ONE</a>
-        <a href="#">TWO</a>
-        <a href="#">THREE</a>
+        <a href="#">Brian</a>
+        <a href="#">Kevin</a>
+        <a href="#">AJ</a>
+        <a href="#">Howie D</a>
+        <a href="#">Nick?</a>
       </nav>
       <div class="hamburger">
         <div></div>
@@ -22,6 +24,7 @@
       </div>
     </header>
 
+    <main>
       <!-- The big news content -->
       <section class="big-news">
         <section class="container">
@@ -39,13 +42,6 @@
           <h3>A blast from the past</h3>
           <p>What is your favourite Backstreet Boys' logo?</p>
           <section class="article-news">
-            <a href="#">
-              <article>
-                <img src="Images/bsblogo6.jpeg" alt="Backstreet Boys Logo">
-                <h4>This is one logo</h4>
-                <div></div>
-              </article>
-            </a>
             <a href="#">
               <article>
                 <img src="Images/bsblogo2.png" alt="Backstreet Boys Logo">
@@ -77,6 +73,7 @@
           </section>
         </section>
       </section>
+    </main>
     <footer></footer>
   </body>
 </html>
