--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Oldflån Season Magazine</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <!-- header, logo, navbar -->
+  <header class="logo">
+    <img src="./OlflånLogo.svg" alt="Logo Oldflån">
+    <h1>Oldflån // Season // Magazine</h1>
+  </header>
+  <nav>
+    <a href="#">Summer</a>
+    <a href="#">Autumn</a>
+    <a href="#">Winter</a>
+    <a href="#">Spring</a>
+  </nav>
+  <main>
+  <!-- Head news -->
+  <section>
+   <div class="head-news">
+      <img src="./nöjdfjället2.jpeg" alt="nöjdfjället">
+      <h2> New hiking trail between Ansätten and Önrun</h2>
+      <p>Leden upp till fjället Önrun i Åkersjön är lätt att vandra och man kommer högt upp och kan njuta av milsvid
+        utsikt. Önrun sägs ha ”Sveriges vidaste vy”. Toppen ligger på 856 möh.Leden upp till fjället Önrun i Åkersjön är
+        lätt att vandra och man kommer högt upp och kan njuta av milsvid utsikt. Önrun sägs ha ”Sveriges vidaste vy”.
+        Toppen ligger på 856 möh.</p>
+   </div> 
+   <div class="head-news">
+      <img src="./nöjdfjället.jpeg" alt="nöjdfjället">
+      <h2> Nature is blooming along the Flower Trail to Ansätten</h2>
+      <p>Leden upp till fjället Önrun i Åkersjön är lätt att vandra och man kommer högt upp och kan njuta av milsvid
+        utsikt. Önrun sägs ha ”Sveriges vidaste vy”. Toppen ligger på 856 möh.Leden upp till fjället Önrun i Åkersjön är
+        lätt att vandra och man kommer högt upp och kan njuta av milsvid utsikt. Önrun sägs ha ”Sveriges vidaste vy”.
+        Toppen ligger på 856 möh.</p>
+   </div>
+  </section>
+  <!-- News boxes -->
+  <section>
+    <div class="news-box">
+      <h3>Oldflån <img src="./nöjdfjället.jpeg" alt="nöjdfjället"> </h3>
+    </div>
+    <div class="news-box">
+      <h3>Oldflån <img src="./nöjdfjället.jpeg" alt="nöjdfjället"></h3>
+    </div>
+    <div class="news-box">
+      <h3>Oldflån <img src="./nöjdfjället.jpeg" alt="nöjdfjället"> </h3>
+    </div>
+
+  </section>
+  </main>
+  <!-- Footer -->
+  <footer>
+  </footer>
+</body>
+
 </html>
