--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
     <header>
       <!-- Some kind of logo and navbar -->
     </header>
+    <h1>hello world</h1>
 
     <section class="big-news">
       <!-- The big news content -->
