Changed some font-sizes for responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -26,6 +26,7 @@
       <!-- The big news content -->
       <a href="#">
       <h2>LATEST TREND</h2>
+      <h6>Posted: August 26th, 2020</h6>
       <h4>This is an important text about a new trend. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
       </h4>
@@ -80,7 +81,7 @@
         laborum. xcepteur sint occaecat cupidatat non 
         proident, sunt in culpa qui officia deserunt mollit anim id est 
         laborum.</p>
-      </div>
+        </div>
      </a>
     </section>
 
@@ -89,6 +90,7 @@
       <div class="grid-child one">
       <a href="#">
         <h3>NEWS</h3>
+        <h6>Posted: August 25th, 2020</h6>
         <img class="img-small" src="https://images.unsplash.com/photo-1528741254566-d718e868201f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
         alt="Picture with ballons and a pink chair">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
@@ -104,6 +106,7 @@
       <div class="grid-child two">
       <a href="#">
         <h3>NEWS</h3>
+        <h6>Posted: August 25th, 2020</h6>
         <img class="img-small" src="https://images.unsplash.com/photo-1597218859878-0e6cad008639?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
         alt="Picture with wood burning stove etc.">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
@@ -117,6 +120,7 @@
       <div class="grid-child three">
       <a href="#">
         <h3>NEWS</h3>
+        <h6>Posted: August 26th, 2020</h6>
         <img class="img-small" src="https://images.unsplash.com/photo-1551029118-d3c293a67c0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
         alt="Picture of a plant etc.">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
@@ -134,6 +138,7 @@
       <div class="grid-child four">
       <a href="#">
         <h3>NEWS</h3>
+        <h6>Posted: August 24th, 2020</h6>
         <img class="img-small" src="https://images.unsplash.com/photo-1453904300235-0f2f60b15b5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
         alt="Picture of a plant">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
@@ -151,6 +156,7 @@
       <div class="grid-child five">
       <a href="#">
         <h3>NEWS</h3>
+        <h6>Posted: August 24th, 2020</h6>
           <div class="box">
           <img class="img-smaller" src="https://images.unsplash.com/photo-1582732896686-e0b8c500faa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
           alt="Picture of a lamp">
@@ -167,6 +173,7 @@
       <div class="grid-child six">
       <a href="#">
         <h3>NEWS</h3>
+        <h6>Posted: August 24th, 2020</h6>
           <div class="box">
           <img class="img-smaller" src="https://images.unsplash.com/photo-1553797794-4c4d2c55dbfb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
           alt="Picture of a lamp">
@@ -180,6 +187,7 @@
       <div class="grid-child seven">
         <a href="#">
           <h3>NEWS</h3>
+          <h6>Posted: August 24th, 2020</h6>
             <div class="box spc">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
               do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -200,6 +208,7 @@
         <div class="grid-child eight">
           <a href="#">
             <h3>WHAT'S NEXT?</h3>
+            <h6>Posted: August 25th, 2020</h6>
               <p>Don't forget next week's update! Then we will introduce you to all new autumn trends!</p>
           </a>    
           </div> 
