--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <header>
-      <div class="logo">
+      <div class="logo"> <!--Contains logo and magazine name-->
         <img src="./logo.png" alt="logo">
         <p>URBAN STYLE</p>
       </div>
