made it responsive

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Project 2: The New PLANT Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header><!-- Navbar: links to other plants pages? Inga länkar bara text -->
@@ -40,7 +40,7 @@
     <section class="plants"> <!-- Behöver något NEWS:igt! och kanske en stor bild?-->
       <!-- se över denna text! och gör den smalare! -->
       <h4> Here we have selected a few of the most beautiful and easy plants.
-        They will make your home even cosier, homely and even healthier! 
+        They will make your home even cosier more homely and even healthier! 
       </h4>
 
               <!-- Boxes with the most common and easy skötta plantsen.   -->
