--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+
       <img src="hearthnoob.png" alt="hearthnoob logo">
     
     </header>
@@ -20,6 +21,7 @@
 
        <!--Big news section-->
     <section class="big-news">
+
       <div>
         <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
@@ -30,6 +32,7 @@
 
       <!-- The other news section -->
     <section class="other-news">
+
       <div>
         <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
@@ -56,8 +59,12 @@
 
     </section>
 
+    <!-- footer section -->
+
     <footer class="footer">
+
       <h2>Created by monkeybusiness101</h2>
+
     </footer>
   </body>
 </html>
