--- a/code/index.html
+++ b/code/index.html
@@ -3,28 +3,123 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Sandrine's News Site</title>
+  <title>Sandrine's Dog Rescue</title>
+  <link rel="shortcut icon" href="./images/favicon.ico">
   <link rel="stylesheet" href="./style.css" />
+  <link href='https://fonts.googleapis.com/css?family=Athiti' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Indie Flower' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <header>
-    <img class="" src="./logo.svg" alt="A Nice logo">
-    <!-- Some kind of logo and navbar -->
+  <header>     <!-- Some kind of logo and navbar -->
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="sitename">
+      <img src="./images/paw-solid.svg" alt="logo">
+      <div>SANDRINE'S DOG RESCUE</div>
+    </div>
+    <nav>
+      <a href="#">ADOPTION</a>
+      <a href="#">DONATION</a>
+      <a href="#">ABOUT US</a>
+    </nav>
   </header>
 
-  <main>
-    <section class="big-news">
-      <!-- The big news content -->
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+  <section class="big-news">
+    <!-- The big news content -->
+    <img src="./images/Dog1.jpg" alt="Dog1">
+    <div>
+      <h1>Why buy a dog when you can adopt?</h1>
+      <p>
+        Are you thinking of getting a new life mate? There are many who want to be your friend.
+      </p>
+    </div>
+  </section>
+
+  <section class="news">
+    <!-- The other news  -->
+    <h1>Dogs looking for home</h1>
+    <p>Do you live an adventurous, sporty and active life that the dog should participate in? Do you enjoy strolling in green areas and having a faithful friend next to you on the sofa when the evening comes? Take a closer look at the dogs that are relevant for adoption and contact us.</p>
+    <section class="cards">
+      <a href="#">
+        <figure>
+          <img src="./images/Dog2.jpg" alt="Archie">
+          <figcaption>Archie</figcaption>
+        </figure>
+      </a>
+      <h2 class="description">Archie</h2>
+      <p class="description">
+        We remember this guy who was found dumped out on a field near the fence. Acke just sat there, he had given up and he no longer knew how to cope with finding food or surviving at all. Rudi saw him and stopped the car but Acke didn't move, he didn't even try to escape . We see that Acke feels confused and does not know what is happening and that is why we are now looking for Ackes home so that he can get a lot of love and finally feel loved for the nice dog he turned out to be . If you are interested in giving Acke a nice and safe home, please contact us with an interest report.
+      </p>
+      <a href="#">
+        <figure>
+          <img src="./images/Dog3.jpg" alt="Charm">
+          <figcaption>Charm</figcaption>
+        </figure>
+      </a>
+      <h2 class="description">Charm</h2>
+      <p class="description">
+        This guy was just days away from losing his life when we were asked if we could take one or two dogs from the dreaded municipal fence in Vaslui over 30 miles from our shelter located outside Bucharest. Pictures and videos came and 2 dogs turned seven despite the huge lack of space in our fence. In the fence, it was quiet despite hundreds of dogs and it was a really eerie mood as no one dared to take it when the rescue entered the kennels. Charm was one of those dogs that immediately drew our attention when he sat shaking in a corner and looking into the wall, he did not dare to be seen when customers attacks that ended with death.
+      </p>
+      <a href="#">
+        <figure>
+          <img src="./images/Dog4.jpg" alt="Clark">
+          <figcaption>Clark</figcaption>
+        </figure>
+      </a>
+      <h2 class="description">Clark</h2>
+      <p class="description">
+        Clark lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Clark was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
+      </p>
+      <a href="#">
+        <figure>
+          <img src="./images/Dog5.jpg" alt="Clark">
+          <figcaption>Clark</figcaption>
+        </figure>
+      </a>
+      <h2 class="description">Clark</h2>
+      <p class="description">
+        Clark lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Clark was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
+      </p>
+      <a href="#">
+        <figure>
+          <img src="./images/Dog6.jpg" alt="Clark">
+          <figcaption>Clark</figcaption>
+        </figure>
+      </a>
+      <h2 class="description">Clark</h2>
+      <p class="description">
+        Clark lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Clark was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
+      </p>
+      <a href="#">
+        <figure>
+          <img src="./images/Dog7.jpg" alt="Clark">
+          <figcaption>Clark</figcaption>
+        </figure>
+      </a>
+      <h2 class="description">Clark</h2>
+      <p class="description">
+        Clark lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Clark was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
+      </p>
+      <a href="#">
+        <figure>
+          <img src="./images/Dog8.jpg" alt="Clark">
+          <figcaption>Clark</figcaption>
+        </figure>
+      </a>
+      <h2 class="description">Clark</h2>
+      <p class="description">
+        Clark lived on a farm that would change owners with many more small dogs, they stood chained in the mud enclosed and many times without seeing the light of day and Clark was one of them. The farm had changed owners and new owners were in the process of poisoning all the dogs when a woman saw this and got sneeze at what was happening. Now one by one they have got their homes and there are 3 dogs left of what we call Farmerdogs.
+      </p>
     </section>
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </main>
+  </section>
+
+
+
   <footer>
     <p>Footer</p>
   </footer>
